@@ -1,3 +1,7 @@
+2012-06-28  6.8.0-0 Cristy  <quetzlzacatenango@image...>
+  * Increase epsilon value, smallest difference between two points (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=15870).
+
 2012-06-28  6.7.7-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.7-10, SVN revision 8534.
 
